// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/visualizations/EditVisualization.vue if a visualization already exists the visualization data is prefilled 1`] = `
<div class="visualization-add">
  <div class="mt-4">
    <v-stepper-stub value="1">
      <v-stepper-header-stub>
        <v-stepper-step-stub color="primary" completeicon="$complete" editable="true" editicon="$edit" erroricon="$error" rules="" step="1">
          visualizations.add.steps.type.title
          <small>visualizations.add.steps.type.subtitle</small></v-stepper-step-stub>
        <v-divider-stub></v-divider-stub>
        <v-stepper-step-stub color="primary" completeicon="$complete" editicon="$edit" erroricon="$error" rules="" step="2">
          visualizations.add.steps.general.title
          <small>visualizations.add.steps.general.subtitle</small></v-stepper-step-stub>
        <v-divider-stub></v-divider-stub>
        <v-stepper-step-stub color="primary" completeicon="$complete" editicon="$edit" erroricon="$error" rules="" step="3">
          visualizations.add.steps.data.title
          <small>visualizations.add.steps.data.subtitle</small></v-stepper-step-stub>
        <v-divider-stub></v-divider-stub>
        <v-stepper-step-stub color="primary" completeicon="$complete" editicon="$edit" erroricon="$error" rules="" step="4">
          visualizations.add.steps.parameters.title
          <small>visualizations.add.steps.parameters.subtitle</small></v-stepper-step-stub>
      </v-stepper-header-stub>
      <v-stepper-items-stub>
        <v-stepper-content-stub step="1">
          <visualization-edit-select-type-component-stub currenttype="barchart"></visualization-edit-select-type-component-stub>
        </v-stepper-content-stub>
        <v-stepper-content-stub step="2">
          <visualization-edit-general-information-component-stub name="My Chart"></visualization-edit-general-information-component-stub>
        </v-stepper-content-stub>
        <v-stepper-content-stub step="3">
          <visualization-edit-choose-data-component-stub visualization="[object Object]"></visualization-edit-choose-data-component-stub>
        </v-stepper-content-stub>
        <v-stepper-content-stub step="4">
          <visualization-edit-parameters-component-stub visualization="[object Object]"></visualization-edit-parameters-component-stub>
        </v-stepper-content-stub>
      </v-stepper-items-stub>
    </v-stepper-stub>
  </div>
</div>
`;

exports[`pages/visualizations/EditVisualization.vue renders the page 1`] = `
<div class="visualization-add">
  <div class="mt-4">
    <v-stepper-stub value="1">
      <v-stepper-header-stub>
        <v-stepper-step-stub color="primary" completeicon="$complete" editable="true" editicon="$edit" erroricon="$error" rules="" step="1">
          visualizations.add.steps.type.title
          <small>visualizations.add.steps.type.subtitle</small></v-stepper-step-stub>
        <v-divider-stub></v-divider-stub>
        <v-stepper-step-stub color="primary" completeicon="$complete" editicon="$edit" erroricon="$error" rules="" step="2">
          visualizations.add.steps.general.title
          <small>visualizations.add.steps.general.subtitle</small></v-stepper-step-stub>
        <v-divider-stub></v-divider-stub>
        <v-stepper-step-stub color="primary" completeicon="$complete" editicon="$edit" erroricon="$error" rules="" step="3">
          visualizations.add.steps.data.title
          <small>visualizations.add.steps.data.subtitle</small></v-stepper-step-stub>
        <v-divider-stub></v-divider-stub>
        <v-stepper-step-stub color="primary" completeicon="$complete" editicon="$edit" erroricon="$error" rules="" step="4">
          visualizations.add.steps.parameters.title
          <small>visualizations.add.steps.parameters.subtitle</small></v-stepper-step-stub>
      </v-stepper-header-stub>
      <v-stepper-items-stub>
        <v-stepper-content-stub step="1">
          <visualization-edit-select-type-component-stub></visualization-edit-select-type-component-stub>
        </v-stepper-content-stub>
        <v-stepper-content-stub step="2">
          <visualization-edit-general-information-component-stub name=""></visualization-edit-general-information-component-stub>
        </v-stepper-content-stub>
        <v-stepper-content-stub step="3">
          <visualization-edit-choose-data-component-stub visualization="[object Object]"></visualization-edit-choose-data-component-stub>
        </v-stepper-content-stub>
        <v-stepper-content-stub step="4">
          <visualization-edit-parameters-component-stub visualization="[object Object]"></visualization-edit-parameters-component-stub>
        </v-stepper-content-stub>
      </v-stepper-items-stub>
    </v-stepper-stub>
  </div>
</div>
`;
